# llama.dart

./: .gitignore  pubspec.yaml
src/llama_dart/: pubspec.yaml
src/llama_dart/example/: llama_dart_example.dart
src/llama_dart/hook/: build.dart  cmake_builder.dart
src/llama_dart/hook/cmake/: cmake_builder.dart  logger.dart  tools.dart
src/llama_dart/lib/: llama_dart.dart
src/llama_dart/lib/src/: ffi.g.dart  llama_dart_base.dart
src/llama_dart/test/: llama_dart_test.dart
src/llama_dart/tool/: ffigen.dart
src/llama_flutter/: .metadata  README.md  ffigen.yaml  pubspec.yaml
src/llama_flutter/android/: build.gradle
src/llama_flutter/android/src/main/: AndroidManifest.xml
src/llama_flutter/example/: README.md  pubspec.yaml
src/llama_flutter/example/android/app/: build.gradle.kts
src/llama_flutter/example/ios/Runner/: Info.plist
src/llama_flutter/example/ios/Runner.xcodeproj/: project.pbxproj
src/llama_flutter/example/lib/: main.dart
src/llama_flutter/example/linux/: CMakeLists.txt
src/llama_flutter/example/linux/runner/: my_application.cc
src/llama_flutter/example/macos/Runner.xcodeproj/: project.pbxproj
src/llama_flutter/example/windows/: CMakeLists.txt
src/llama_flutter/ios/: llama_flutter.podspec
src/llama_flutter/ios/Classes/: llama_flutter.c
src/llama_flutter/lib/: llama_flutter.dart  llama_flutter_bindings_generated.dart
src/llama_flutter/linux/: CMakeLists.txt
src/llama_flutter/macos/: llama_flutter.podspec
src/llama_flutter/src/: CMakeLists.txt  llama_flutter.c
src/llama_flutter/windows/: CMakeLists.txt
(+5 files in other folders)
